--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^9.23.0",
+    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -18,7 +19,8 @@
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
     "react-toastify": "^9.1.3",
-    "swiper": "^8.3.2",
+    "swiper": "^10.0.0",
+    "typed.js": "^2.0.16",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
